commit vscode pureba

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li><p>Cuando jugue un video juego por primera ves me acuerdo que fue The Legend of Zelda Ocarina of Time</p></li>
             <li><p>Cuando jugue basketball por primera ves fue el deporte que mas he amado y que aun juego de ves en cuando con amigos</p></li>
             <li><p>Cuando me gradue de bachillerato despues de 11 annos de estudiar en la misma institucion y recibir una banda de perseverancia 
-                la cual se las dan a los alumnos que se graduan y han estado en la institucion desde preparatoria</p>
+                la cual se las dan a los alumnos que se graduan y han estado en la institucion desde preparatorias</p>
             </li>
         </ul>
         
