--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             las conozco si soy hablador, tambien soy muy alegre y me gustan los video juegos, tambien en su tiempo era mas
             activo ahora la mayor parte de mi tiempo la paso estudiando o jugando LoL, con respecto a mi auto estima creo
             que es alta y las criticas las puedo ver de forma objetiva lo que me ayuda a ver mis errores y poder corregirlos
-            de una forma en la que no me siento mal por estos.
+            de una forma en la que no me siento mal por estosss.
         </p>
 
         <p>Me compararia con mi mama que ella es una ejemplo a seguir para mi en su forma de actuar y etica que maneja.</p>
